--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="header-bottom">
           <nav class="nav-container">
             <ul class="nav-area">
-              <li class="nav-item"><a href="">Home</a></li>
+              <li class="nav-item"><a href="">Hello</a></li>
               <li class="nav-item"><a href="">Chicken</a></li>
               <li class="nav-item"><a href="">Pasta</a></li>
               <li class="nav-item"><a href="">Vegan</a></li>
