--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   ></a>
                   <a class="squared bg-plus fa-solid fa-plus icon" href=""></a>
                 </div>
-                <div class="social-fixed">
+                <div class="social-fixed vertical">
                   <div>
                     <a href=""><img src="fixed.png" alt="" /></a>
                   </div>
@@ -461,6 +461,11 @@
               </div>
             </div>
           </section>
+          <div class="social-fixed horizontal">
+            <div>
+              <a href=""><img src="fixed2.png" alt="" /></a>
+            </div>
+          </div>
         </div>
         <div class="widget-container">
           <aside class="widget-area">
